# seed

./: .gitignore  Cargo.toml  README.md  SPECS.md  TODO.md  TOOLS.md
a32_asm/: Cargo.toml
a32_cli/: Cargo.toml
a32_core/: Cargo.toml
a32_runner/: Cargo.toml
book/: 00_introduction.md  01_logique_booleenne.md  02_arithmetique.md  03_memoire.md  04_architecture.md  05_cpu.md  06_assembleur.md  07_compilateur.md  08_langage.md  09_os.md  10_exercices.md  10bis_debogage.md  11_cache.md  12_interruptions.md  13_concepts_avances.md  Codex_Guide.html  Codex_Guide_v0.html  Codex_Solutions.html  Codex_Solutions.md  README.md  Seed_Guide_v0.html  Seed_Solutions.html  Seed_Solutions.md  Solutions.md  build-solutions.sh  build.sh  metadata-eisvogel.yaml  metadata.yaml
c32_cli/: Cargo.toml
c32_core/: Cargo.toml
c32_runner/: Cargo.toml
cours/: CONTRIBUTING.md  Makefile  README.md
docs/: README.md  architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree.md
hdl_cli/: Cargo.toml
hdl_core/: Cargo.toml
hdl_lib/: PROGRESSION.md
hdl_tests/: run_tests.rs
os_lib/: alloc.c  io.c  keyboard.c  screen.c  string.c  sys.c
scripts/: update-hdl-tests.js
tests/: T01_alu_flags.a32  T01_alu_flags.ref  T02_predication.a32  T02_predication.ref  T03_load_store.a32  T03_load_store.ref  T04_branch_bl.a32  T04_branch_bl.ref  T05_literal_pool.a32  T05_literal_pool.ref  T06_misaligned.a32  T06_misaligned.ref  T07_mmio_output.a32  T07_mmio_output.ref  T08_suffix_order.a32  T10_illegal.ref  (+24 more)
web_sim/: Cargo.toml
web_sim/src/: lib.rs
(+432 files in other folders)
