[package]
name = "web_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdl_core = { path = "../hdl_core" }
a32_core = { path = "../a32_core" }
a32_asm = { path = "../a32_asm" }
c32_core = { path = "../c32_core" }
wasm-bindgen = { version = "0.2", optional = true }
serde-json-wasm = { version = "1.0", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
wasm = ["wasm-bindgen", "serde-json-wasm", "js-sys"]
